--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "morgan": "^1.10.0",
     "mysql2": "^3.2.0",
     "reflect-metadata": "^0.1.13",
